fix(#19): fix elements alignment on spaces view

--- a/src/components/platform-header/PlatformHeader.scss
+++ b/src/components/platform-header/PlatformHeader.scss
@@ -1,7 +1,6 @@
 .platform-header {
   display: flex;
   align-items: center;
-  margin-bottom: $spacing-unit;
   padding: $spacing-unit/2 $spacing-unit*2;
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
   background-color: $color-white;
