--- a/src/components/space-creation-card/SpaceCreationCard.scss
+++ b/src/components/space-creation-card/SpaceCreationCard.scss
@@ -1,7 +1,6 @@
 .space-creation-card {
   width: 215px;
   height: 275px;
-  margin: $spacing-unit*2;
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.3);
   color: $color-primary;
 
