--- a/src/views/dashboard/Dashboard.scss
+++ b/src/views/dashboard/Dashboard.scss
@@ -1,5 +1,5 @@
 .dashboard-view {
-  height: calc(100% - 74px);
+  height: calc(100% - 62px);
   padding: $spacing-unit*2;
 
   &__head {
